Fix flicker on loading

--- a/assets/scss/2.layout.page.scss
+++ b/assets/scss/2.layout.page.scss
@@ -40,6 +40,10 @@
 body {
   color: var(--color-text);
   background: var(--color-bg);
+  
+  &.is-loading {
+    display: none;
+  }
 }
 
 .container {
